2013-06-21  James Hunt  <james.hunt@ubuntu.com>

	* init/quiesce.c: quiesce_show_slow_jobs(): Change message log level
	  to ensure it is displayed by default.

2013-06-20  James Hunt  <james.hunt@ubuntu.com>

	* init/quiesce.c: quiesce_show_slow_jobs(): Don't free static string
	  (LP: #1190526).

2013-06-05  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/data/upstart-1.8+apparmor.json: New test data file.
	* init/tests/data/upstart-1.8+full_serialisation-apparmor.json:
	  New test data file.
	* init/tests/data/upstart-1.8+full_serialisation+apparmor.json:
	  New test data file.
	* init/tests/test_state.c:
	  - test_upgrade(): Re-initialise lists and hashes as a convenience to
	    the tests.
	  - test_upstart_with_apparmor_upgrade(): New test to ensure Upstart can
	    parse the current 1.8 format JSON with the addition of the AppArmor
	    serialisation (but crucially *without* the full serialisation data
	    (EventOperator, etc).
	  - test_upstart_full_serialise_without_apparmor_upgrade(): New test to
	    ensure Upstart can parse the current 1.8 format JSON with the
	    addition of the full serialisation data (EventOperator, etc),
	    but _without_ the AppArmor serialisation.
	  - test_upstart_full_serialise_with_apparmor_upgrade(): New test to
	    ensure Upstart can parse the current 1.8 format JSON with the
	    addition of the full serialisation data (EventOperator, etc),
	    and the AppArmor serialisation.
	* init/state.c: state_from_string(): Check if ConfSources
	  exist in the serialisation data to allow distinction between
	  ConfSources not present and failing to deserialise them.

2013-06-04  James Hunt  <james.hunt@ubuntu.com>

	* init/event.c: event_deserialise(): Revert to checking JSON for
	  blockers to avoid reliance on JSON serialisation data format version.
	* init/event_operator.h: Fix misplacement of NIH_END_EXTERN.
	* init/state.c: Remove serialisation version code since the autoconf